# subliminal-learning

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: 01_generate_numbers.py  02_filter_numbers.py  03_create_dataset.py  04_finetune.py  05_evaluate.py  06_compare_evals.py
src/sl/: client.py  config.py  dataset.py  evaluate.py  filter.py  finetune.py  generate.py  utils.py
tests/: test_dataset.py  test_evaluate.py  test_filter.py
